Added operator details to the resource message definition
