# proto/v1beta1/resource_details_go_proto/resource_details.pb.go
@@ -1,0 +1,178 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// source: resource_details.proto
+
+package resource_details_go_proto
+
+import (
+	fmt "fmt"
+	proto "github.com/golang/protobuf/proto"
+	math "math"
+)
+
+// Reference imports to suppress errors if they are not otherwise used.
+var _ = proto.Marshal
+var _ = fmt.Errorf
+var _ = math.Inf
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the proto package it is being compiled against.
+// A compilation error at this line likely means your copy of the
+// proto package needs to be updated.
+const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
+
+type GenericDetails struct {
+	Details              map[string]string `protobuf:"bytes,1,rep,name=details,proto3" json:"details,omitempty" protobuf_key:"bytes,1,opt,name=key,proto3" protobuf_val:"bytes,2,opt,name=value,proto3"`
+	XXX_NoUnkeyedLiteral struct{}          `json:"-"`
+	XXX_unrecognized     []byte            `json:"-"`
+	XXX_sizecache        int32             `json:"-"`
+}
+
+func (m *GenericDetails) Reset()         { *m = GenericDetails{} }
+func (m *GenericDetails) String() string { return proto.CompactTextString(m) }
+func (*GenericDetails) ProtoMessage()    {}
+func (*GenericDetails) Descriptor() ([]byte, []int) {
+	return fileDescriptor_d924ae8f54835e8c, []int{0}
+}
+
+func (m *GenericDetails) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_GenericDetails.Unmarshal(m, b)
+}
+func (m *GenericDetails) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_GenericDetails.Marshal(b, m, deterministic)
+}
+func (m *GenericDetails) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_GenericDetails.Merge(m, src)
+}
+func (m *GenericDetails) XXX_Size() int {
+	return xxx_messageInfo_GenericDetails.Size(m)
+}
+func (m *GenericDetails) XXX_DiscardUnknown() {
+	xxx_messageInfo_GenericDetails.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_GenericDetails proto.InternalMessageInfo
+
+func (m *GenericDetails) GetDetails() map[string]string {
+	if m != nil {
+		return m.Details
+	}
+	return nil
+}
+
+type OperatorDetails struct {
+	Operators            []*OperatorIdentifier `protobuf:"bytes,1,rep,name=operators,proto3" json:"operators,omitempty"`
+	XXX_NoUnkeyedLiteral struct{}              `json:"-"`
+	XXX_unrecognized     []byte                `json:"-"`
+	XXX_sizecache        int32                 `json:"-"`
+}
+
+func (m *OperatorDetails) Reset()         { *m = OperatorDetails{} }
+func (m *OperatorDetails) String() string { return proto.CompactTextString(m) }
+func (*OperatorDetails) ProtoMessage()    {}
+func (*OperatorDetails) Descriptor() ([]byte, []int) {
+	return fileDescriptor_d924ae8f54835e8c, []int{1}
+}
+
+func (m *OperatorDetails) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_OperatorDetails.Unmarshal(m, b)
+}
+func (m *OperatorDetails) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_OperatorDetails.Marshal(b, m, deterministic)
+}
+func (m *OperatorDetails) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_OperatorDetails.Merge(m, src)
+}
+func (m *OperatorDetails) XXX_Size() int {
+	return xxx_messageInfo_OperatorDetails.Size(m)
+}
+func (m *OperatorDetails) XXX_DiscardUnknown() {
+	xxx_messageInfo_OperatorDetails.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_OperatorDetails proto.InternalMessageInfo
+
+func (m *OperatorDetails) GetOperators() []*OperatorIdentifier {
+	if m != nil {
+		return m.Operators
+	}
+	return nil
+}
+
+type OperatorIdentifier struct {
+	OperatorName         string   `protobuf:"bytes,1,opt,name=operator_name,json=operatorName,proto3" json:"operator_name,omitempty"`
+	OperatorVersion      string   `protobuf:"bytes,2,opt,name=operator_version,json=operatorVersion,proto3" json:"operator_version,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *OperatorIdentifier) Reset()         { *m = OperatorIdentifier{} }
+func (m *OperatorIdentifier) String() string { return proto.CompactTextString(m) }
+func (*OperatorIdentifier) ProtoMessage()    {}
+func (*OperatorIdentifier) Descriptor() ([]byte, []int) {
+	return fileDescriptor_d924ae8f54835e8c, []int{2}
+}
+
+func (m *OperatorIdentifier) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_OperatorIdentifier.Unmarshal(m, b)
+}
+func (m *OperatorIdentifier) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_OperatorIdentifier.Marshal(b, m, deterministic)
+}
+func (m *OperatorIdentifier) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_OperatorIdentifier.Merge(m, src)
+}
+func (m *OperatorIdentifier) XXX_Size() int {
+	return xxx_messageInfo_OperatorIdentifier.Size(m)
+}
+func (m *OperatorIdentifier) XXX_DiscardUnknown() {
+	xxx_messageInfo_OperatorIdentifier.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_OperatorIdentifier proto.InternalMessageInfo
+
+func (m *OperatorIdentifier) GetOperatorName() string {
+	if m != nil {
+		return m.OperatorName
+	}
+	return ""
+}
+
+func (m *OperatorIdentifier) GetOperatorVersion() string {
+	if m != nil {
+		return m.OperatorVersion
+	}
+	return ""
+}
+
+func init() {
+	proto.RegisterType((*GenericDetails)(nil), "grafeas.v1beta1.resource_details.GenericDetails")
+	proto.RegisterMapType((map[string]string)(nil), "grafeas.v1beta1.resource_details.GenericDetails.DetailsEntry")
+	proto.RegisterType((*OperatorDetails)(nil), "grafeas.v1beta1.resource_details.OperatorDetails")
+	proto.RegisterType((*OperatorIdentifier)(nil), "grafeas.v1beta1.resource_details.OperatorIdentifier")
+}
+
+func init() { proto.RegisterFile("resource_details.proto", fileDescriptor_d924ae8f54835e8c) }
+
+var fileDescriptor_d924ae8f54835e8c = []byte{
+	// 292 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x84, 0x91, 0x41, 0x4b, 0xc3, 0x40,
+	0x10, 0x85, 0xd9, 0x16, 0x95, 0x8e, 0xd5, 0x96, 0x45, 0x24, 0x78, 0x0a, 0xe9, 0xa5, 0x5e, 0x36,
+	0x54, 0x3d, 0x48, 0xc1, 0x83, 0x45, 0x29, 0x5e, 0x54, 0x72, 0x50, 0xf0, 0x12, 0x36, 0xc9, 0x34,
+	0x2e, 0x36, 0xd9, 0xba, 0xd9, 0x04, 0xfa, 0x77, 0x04, 0xff, 0xa7, 0x98, 0xec, 0x56, 0xad, 0x87,
+	0x9c, 0x66, 0xe7, 0xcd, 0x37, 0x8f, 0xb7, 0x0c, 0x1c, 0x2b, 0x2c, 0x64, 0xa9, 0x62, 0x0c, 0x13,
+	0xd4, 0x5c, 0x2c, 0x0b, 0xb6, 0x52, 0x52, 0x4b, 0xea, 0xa6, 0x8a, 0x2f, 0x90, 0x17, 0xac, 0x9a,
+	0x44, 0xa8, 0xf9, 0x84, 0x6d, 0x73, 0xde, 0x27, 0x81, 0xc3, 0x39, 0xe6, 0xa8, 0x44, 0x7c, 0xd3,
+	0x48, 0xf4, 0x19, 0xf6, 0xcc, 0xd4, 0x21, 0x6e, 0x77, 0xbc, 0x7f, 0x76, 0xc5, 0xda, 0x6c, 0xd8,
+	0x5f, 0x0b, 0x66, 0xea, 0x6d, 0xae, 0xd5, 0x3a, 0xb0, 0x6e, 0x27, 0x53, 0xe8, 0xff, 0x1e, 0xd0,
+	0x21, 0x74, 0xdf, 0x70, 0xed, 0x10, 0x97, 0x8c, 0x7b, 0xc1, 0xf7, 0x93, 0x1e, 0xc1, 0x4e, 0xc5,
+	0x97, 0x25, 0x3a, 0x9d, 0x5a, 0x6b, 0x9a, 0x69, 0xe7, 0x92, 0x78, 0x08, 0x83, 0x87, 0x15, 0x2a,
+	0xae, 0xa5, 0xb2, 0x39, 0x03, 0xe8, 0x49, 0x23, 0xd9, 0xa4, 0x17, 0xed, 0x49, 0xad, 0xcb, 0x5d,
+	0x82, 0xb9, 0x16, 0x0b, 0x81, 0x2a, 0xf8, 0xb1, 0xf1, 0x12, 0xa0, 0xff, 0x01, 0x3a, 0x82, 0x03,
+	0x8b, 0x84, 0x39, 0xcf, 0xd0, 0x44, 0xee, 0x5b, 0xf1, 0x9e, 0x67, 0x48, 0x4f, 0x61, 0xb8, 0x81,
+	0x2a, 0x54, 0x85, 0x90, 0xb9, 0xf9, 0xc6, 0xc0, 0xea, 0x4f, 0x8d, 0x3c, 0x7b, 0x87, 0x91, 0x90,
+	0xad, 0x51, 0x1f, 0xc9, 0xcb, 0x2c, 0x15, 0xfa, 0xb5, 0x8c, 0x58, 0x2c, 0x33, 0xdf, 0xe0, 0x9b,
+	0x5a, 0x5f, 0xd8, 0x37, 0xcb, 0xfe, 0xf6, 0x72, 0x98, 0xca, 0xb0, 0x26, 0x3e, 0x3a, 0xdd, 0x79,
+	0x70, 0x1d, 0xed, 0xd6, 0xcd, 0xf9, 0x57, 0x00, 0x00, 0x00, 0xff, 0xff, 0x01, 0xda, 0x5c, 0x3f,
+	0x2a, 0x02, 0x00, 0x00,
+}
